# cluxion-Agentplugin-supercoder

./: ARCHITECTURE.md  README.md  __init__.py  plugin.yaml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml
.grok-briefs/: ci-hermes-probe-skip.md  fix-empty-oldtext-infinite-loop.md  fix-hash-patch-race-0619.md  fix-live-audit-0619.md  p0-read-path-security.md  p2-doctor-security-probes.md  perf-0619.md
Docs/: README.md  agent-surfaces.md  architecture.md  capabilities.md  design.md  installation.md  rust-architecture.md  tools.md
adapters/claude/.claude-plugin/: plugin.json
adapters/claude/skills/supercoder/: SKILL.md
adapters/codex/: config-snippet.toml
adapters/hermes/: README.md
commands/: supercoder-doctor.md  supercoder.md
dist-merged/: cluxion_agentplugin_supercoder-0.2.13-cp311-abi3-macosx_11_0_arm64.whl
rust/supercoder_index/: Cargo.toml  pyproject.toml
rust/supercoder_index/src/: fuzzy.rs  lib.rs  main.rs  outline.rs  syntax.rs
scripts/: build_local_wheel.sh
skills/clx-supercoder/: SKILL.md
skills/supercoder/: SKILL.md
src/cluxion_agentplugin_supercoder/: __init__.py  cli.py  plugin.py  runner.py  rust_bridge.py  schemas.py  slash_commands.py
src/cluxion_agentplugin_supercoder/core/: cursor.py  hash_patch.py  line_budget.py  lint_gate.py  queue.py  repo_map.py  retry_loop.py  safety.py  syntax_gate.py  test_gate.py
src/cluxion_agentplugin_supercoder/doctor/: __init__.py  catalog.json  framework.py  probes.py
tests/: conftest.py  test_cli_contract.py  test_cursor.py  test_doctor.py  test_fuzzy_parity.py  test_hash_patch.py  test_line_budget.py  test_lint_gate.py  test_packaging_policy.py  test_patch_hash_alias.py  test_perf_regressions.py  test_plugin.py  test_queue.py  test_repo_map.py  test_retry_loop.py  test_rust_bridge.py  test_safety.py  test_slash_commands.py  test_syntax_gate.py  test_test_gate.py
