[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "cluxion-agentplugin-supercoder"
version = "0.2.24"
description = "Universal agent coding harness plugin: cursor logic, safe patch, line budget, Rust index, test gates."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "cluxion", email = "algocean1204@users.noreply.github.com" }]
keywords = ["cluxion", "hermes-agent", "claude-code", "codex", "coding", "plugin"]
dependencies = ["psutil>=5.9", "PyYAML>=6.0", "ruff>=0.8"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8", "build>=1.2", "twine>=6.0", "wheel>=0.45"]

[project.scripts]
cluxion-supercoder = "cluxion_agentplugin_supercoder.cli:main"

[project.entry-points."hermes_agent.plugins"]
cluxion-agentplugin-supercoder = "cluxion_agentplugin_supercoder.plugin"

[project.urls]
Homepage = "https://github.com/cluxion/cluxion-Agentplugin-supercoder"
Repository = "https://github.com/cluxion/cluxion-Agentplugin-supercoder"
Issues = "https://github.com/cluxion/cluxion-Agentplugin-supercoder/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cluxion_agentplugin_supercoder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "I", "UP", "B", "SIM", "RUF"]
