[package]
name = "supercoder_index"
version = "0.2.0"
edition = "2021"

[lib]
name = "supercoder_index_native"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "supercoder-index"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"
rayon = "1"
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-json = "0.24"
pyo3 = { version = "0.23", features = ["abi3-py311"], optional = true }

[features]
python = ["dep:pyo3", "pyo3/extension-module"]

[profile.release]
lto = true
codegen-units = 1
