[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "supercoder-index-native"
version = "0.2.0"
description = "Native repo index engine for cluxion-Agentplugin-supercoder (PyO3)."
requires-python = ">=3.11"
license = "Apache-2.0"

[tool.maturin]
module-name = "supercoder_index_native"
features = ["python"]
bindings = "pyo3"
